fix(docs): updated models in swagger
