# docs/swagger.yaml
@@ -28,14 +28,18 @@ definitions:
         type: string
       id:
         type: integer
+      link:
+        type: string
       releaseDate:
         type: string
       song:
         type: string
     type: object
-  models.SongCreate:
+  models.SongCreateQuery:
     properties:
       group:
+        type: string
+      link:
         type: string
       releaseDate:
         type: string
@@ -45,6 +49,7 @@ definitions:
         type: string
     required:
     - group
+    - link
     - releaseDate
     - song
     - text
@@ -55,6 +60,8 @@ definitions:
         type: string
       id:
         type: integer
+      link:
+        type: string
       releaseDate:
         type: string
       song:
@@ -65,6 +72,8 @@ definitions:
   models.SongUpdate:
     properties:
       group:
+        type: string
+      link:
         type: string
       releaseDate:
         type: string
@@ -154,7 +163,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/models.SongCreate'
+          $ref: '#/definitions/models.SongCreateQuery'
       produces:
       - application/json
       responses:
